Remove Midtrans integration and sensitive API keys

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,4 @@
 # Environment Variables Configuration
 
-# Midtrans Configuration
-MIDTRANS_SERVER_KEY=your_server_key_here
-MIDTRANS_CLIENT_KEY=your_client_key_here
-MIDTRANS_IS_PRODUCTION=false
-
-# Frontend URL for CORS
-FRONTEND_URL=http://localhost:5173
+# Firebase Configuration
+# Add your Firebase config here if needed
